# backend-catalagopro

./: .env  .gitignore  .pdm-python  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  commands.sh  db.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  struct.md  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
perfil_whatsapp/: DevToolsActivePort  Local State
perfil_whatsapp/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Persistent State  Preferences  Reporting and NEL  TransportSecurity  Visited Links  Web Data
perfil_whatsapp/Default/Cache/Cache_Data/: 0061945b24cfa702_0  0209a1cf347c78f7_0  024a9b5204008e8a_0  0394d0d7003513a9_0  0429326a09badf76_0  0462bb5f9b6c30a3_0  04b36ff490c69e2a_0  04d674e45148f4f2_0  067822695a38275d_0  0789fc37fd40842a_0  07dc8b75e84939b2_0  08b5aaf95516f3d0_0  0b61fd0997872fe8_0  0c43b531961b8ded_0  0c59659cc1dfad76_0  0d1ebc6c08d04a9f_0  0d3563f4b55841db_0  0e198f26ade3c303_0  0f5eaf6d93b4afc9_0  0fb8e830c79dcd29_0  11784cd17c6ab43a_0  11c3ab20d52872e2_0  1255ec420a2b7ccd_0  15145040f7f12f31_0  17c3243221b91e20_0  1ab4dcfd1642b8f7_0  1c33d06bd570f69c_0  1d5086ce09912f95_0  1e050e9a9e07f166_0  1e1887651eb5e6e5_0  1edd08ee13dbb603_0  1fcc96d8ee342e41_0  2029c7743fd039a1_0  20943b007347ca8f_0  2327583da4e38058_0  2354f91ce88f73a0_0  23ebca417ec09f5e_0  24b6a0ef28d38331_0  288441fcd5a832ea_0  2b2bef4c1e4befb9_0  (+212 more)
perfil_whatsapp/Default/DawnGraphiteCache/: data_1  index
perfil_whatsapp/Default/DawnWebGPUCache/: data_1  index
perfil_whatsapp/Default/Extension Rules/: LOG
perfil_whatsapp/Default/Extension Scripts/: LOG
perfil_whatsapp/Default/Extension State/: LOG  LOG.old
perfil_whatsapp/Default/GPUCache/: data_0  data_1  data_2  index
perfil_whatsapp/Default/Session Storage/: LOG  LOG.old
perfil_whatsapp/Default/Sessions/: Session_13389240898202547  Session_13389241435588022  Tabs_13389240977642456  Tabs_13389241435695544
perfil_whatsapp/Default/Site Characteristics Database/: LOG  LOG.old
perfil_whatsapp/Default/WebStorage/: QuotaManager
perfil_whatsapp/Default/shared_proto_db/: LOG  LOG.old
perfil_whatsapp/GrShaderCache/: data_0  data_1  data_2  index
perfil_whatsapp/GraphiteDawnCache/: data_1  index
perfil_whatsapp/ShaderCache/: data_1  index
perfil_whatsapp/segmentation_platform/: ukm_db-wal
src/: config.py  db.sqlite3
src/category/entities/: models.py
src/core/shared/: enums.py  file.py  model.py
src/core/utils/: date.py  enums.py  file.py  regex.py  token.py
src/framework/: asgi.py  settings.py  urls.py  wsgi.py
trash/: api-shopee.py  extract-info.py  list-products.py  main.py
(+239 files in other folders)
