[project]
name = "clicklink-backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "guilherme", email = "vinespedro55@gmail.com"},
]
dependencies = ["django>=5.2", "requests>=2.32.3", "django-ninja>=1.4.1", "pydantic>=2.11.3", "django-cors-headers>=4.7.0", "beautifulsoup4>=4.13.3", "uvicorn>=0.34.1", "pydantic-settings>=2.8.1", "django-redis>=5.4.0", "google-genai>=1.10.0", "selenium>=4.31.0", "pandas>=2.2.3", "schedule>=1.2.2"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
